# test-data-creator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  makefile  pyproject.toml
indata/: address_prefix.txt  address_suffix.txt  first_names.txt  last_names.txt  personnummer.txt  postnummer_ort.txt
src/: constants.py  settings.py  test_data_creator.py  utils.py
tests/: test_combinations.py  test_number_of_persons.py  test_random_utils.py
