[project]
name = "test-data-creator"
version = "0.1.0"
description = "Skapa test-personer med test-personnummer och adresser som ser realistiska ut"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.3",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 100


